# progressive-android-todo

./: .gitignore  .gitmodules  API.md  README.md  SECURITY.md  build.gradle  coverage.gradle  fix_progressive_headers.py  gradle.properties  settings.gradle
.github/workflows/: build.yml  cpp-unit-tests.yml  lemmy-api-test.yml  native-build.yml
docs/: cpp_auth_utils.md  cpp_chat_export.md  cpp_desync_detector.md  cpp_event_cache.md  cpp_latency_tracker.md  cpp_libolm_wrapper.md  cpp_login_flow.md  cpp_module_map.md  cpp_translate_engine.md
progressive/: build.gradle
progressive-app/: build.gradle
progressive-app/src/debug/: AndroidManifest.xml
progressive-app/src/debug/res/layout/: activity_debug_jitsi.xml  activity_debug_menu.xml  fragment_debug_private_settings.xml
progressive-app/src/debug/res/xml/: shortcuts.xml
progressive-app/src/gplay/: AndroidManifest.xml
progressive-app/src/gplay/debug/: google-services.json
progressive-app/src/gplay/nightly/: google-services.json
progressive-app/src/gplay/release/: google-services.json
progressive-app/src/main/: AndroidManifest.xml
progressive-app/src/main/res/drawable-anydpi-v26/: ic_launcher_foreground.xml
progressive-app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
progressive-app/src/main/res/values/: colors.xml
progressive-app/src/main/res/xml/: progressive_app_restrictions.xml
progressive-app/src/nightly/res/xml/: shortcuts.xml
progressive-app/src/release/res/xml/: shortcuts.xml
progressive-config/: build.gradle
progressive-config/src/main/res/values/: config.xml
progressive/src/main/: AndroidManifest.xml
progressive/src/main/cpp/: CMakeLists.txt
progressive/src/main/cpp/include/progressive/: account_data_utils.hpp  account_deactivation_utils.hpp  account_export.hpp  account_utils.hpp  account_validator.hpp  admin_utils.hpp  agent_executor.hpp  alarm_engine.hpp  alias_manager.hpp  attachment_handler.hpp  audio_engine.hpp  auth_models.hpp  auth_utils.hpp  avatar_color_gen.hpp  avatar_cropper.hpp  avatar_fallback_utils.hpp  avatar_history.hpp  avatar_picker.hpp  avatar_url_utils.hpp  avatar_utils.hpp  background_scheduler.hpp  backup_keys_utils.hpp  backup_restore_utils.hpp  backup_utils.hpp  backup_version_utils.hpp  bidirectional_utils.hpp  biometric_auth.hpp  cache_invalidator.hpp  cache_manager.hpp  call_api_models.hpp  call_duration.hpp  call_event_formatter.hpp  call_manager.hpp  canonical_alias_util.hpp  canonical_json.hpp  capabilities_utils.hpp  chat_preview.hpp  chat_tools.hpp  chunked_upload.hpp  client_info.hpp  (+474 more)
progressive/src/main/cpp/lemmy/: CMakeLists.txt
progressive/src/main/cpp/src/: account_data_utils.cpp  account_deactivation_utils.cpp  account_export.cpp  account_manager.cpp  account_utils.cpp  account_validator.cpp  admin_utils.cpp  agent_executor.cpp  alarm_engine.cpp  alias_manager.cpp  attachment_handler.cpp  auth_service_v4.cpp  auth_utils.cpp  avatar_color_gen.cpp  avatar_cropper.cpp  avatar_fallback_utils.cpp  avatar_history.cpp  avatar_picker.cpp  avatar_url_utils.cpp  avatar_utils.cpp  background_scheduler.cpp  backup_controller.cpp  backup_keys_utils.cpp  backup_restore_utils.cpp  backup_utils.cpp  backup_version_utils.cpp  batch_a1.cpp  batch_a2.cpp  batch_a3.cpp  batch_a4.cpp  batch_a5.cpp  batch_a6.cpp  batch_a7.cpp  batch_a8.cpp  batch_a9.cpp  batch_b1.cpp  batch_b2.cpp  batch_b3.cpp  batch_b4.cpp  batch_b5.cpp  (+5958 more)
progressive/src/main/cpp/tests/: test_framework.hpp  test_lemmy.cpp  test_progressive.cpp
progressive/src/main/res/drawable/: ic_download_anim.xml  ic_login_splash_scales.xml  ic_notification_chart_filled.xml  ic_notification_chart_outline.xml  ic_splash_collaboration.xml  ic_splash_collaboration_dark.xml  ic_splash_control.xml  ic_splash_control_dark.xml  ic_splash_conversations.xml  ic_splash_conversations_dark.xml  ic_splash_secure.xml  ic_splash_secure_dark.xml
progressive/src/main/res/layout/: activity_alarm.xml  activity_alarm_list.xml  activity_alarm_settings.xml  activity_emoji_reaction_picker.xml  activity_lemmy_auth.xml  activity_vector_web_view.xml  bottom_sheet_add_rooms_or_spaces_to_space.xml  bottom_sheet_attachment_type_selector.xml  bottom_sheet_call_controls.xml  bottom_sheet_logout_and_backup.xml  bottom_sheet_space_invite_chooser.xml  bottom_sheet_verification.xml  composer_layout.xml  fragment_bootstrap_conclusion.xml  fragment_bootstrap_enter_passphrase.xml  fragment_bootstrap_save_key.xml  fragment_composer.xml  fragment_ftue_account_created.xml  fragment_ftue_combined_register.xml  fragment_invites.xml  fragment_keys_backup_setup_step2.xml  fragment_location_sharing.xml  fragment_login.xml  fragment_login_server_selection.xml  fragment_login_signup_signin_selection.xml  fragment_login_splash.xml  fragment_matrix_to_room_space_card.xml  fragment_new_home_detail.xml  fragment_other_sessions.xml  fragment_room_list.xml  fragment_room_preview_no_preview.xml  fragment_room_uploads.xml  fragment_search.xml  fragment_session_overview.xml  fragment_session_rename.xml  fragment_settings_devices.xml  fragment_space_create_choose_type.xml  fragment_space_leave_advanced.xml  fragment_ssss_access_from_passphrase.xml  fragment_thread_list.xml  (+47 more)
progressive/src/main/res/layout-land/: fragment_lock_screen.xml
progressive/src/main/res/menu/: menu_home.xml  menu_new_home.xml
progressive/src/main/res/values/: arrays_sc.xml  progressive_strings.xml
progressive/src/main/res/xml/: progressive_settings_advanced_settings.xml  progressive_settings_advanced_theme_settings.xml  progressive_settings_general.xml  progressive_settings_labs.xml  progressive_settings_notification_advanced_preferences.xml  progressive_settings_notifications.xml  progressive_settings_preferences.xml  progressive_settings_root.xml  progressive_settings_security_privacy.xml  (+1 more)
vector/: build.gradle
vector-app/: build.gradle  proguard-rules.pro
vector-app/src/fdroid/: AndroidManifest.xml
vector-app/src/gplay/: AndroidManifest.xml
vector/src/androidTest/: AndroidManifest.xml
vector/src/main/: AndroidManifest.xml
vector/src/main/cpp/: CMakeLists.txt
(+3116 files in other folders)
